--- a/manifest.plist
+++ b/manifest.plist
@@ -39,7 +39,7 @@
                 <key>kind</key>  
                 <string>software</string>  
                 <key>title</key>  
-                <string>新知微信功能测试</string>  
+                <string>dream功能测试</string>  
             </dict>  
         </dict>  
     </array>  
